Improve adding threshold to buyer category
Added database constraint. Added 'request relationship' and 'response
relationship' to Threshold which links it to Buyer category. Modified
database schema and provided improved 'default' evolution.
